nullunit (0.34-1) DIST; urgency=medium

  * bug fix for targets without requirements

 -- Peter Howe <peter.howe@virtustream.com>  Tue, 02 Jul 2019 11:14:44 -0600

nullunit (0.33-1) DIST; urgency=medium

  * MCP now detects when the job is done, remove extra target detection
    and manual signaling

 -- Peter Howe <peter.howe@virtustream.com>  Mon, 01 Jul 2019 14:37:29 -0600

nullunit (0.32-1) DIST; urgency=medium

  * filepath with distroversion and type reworked

 -- Peter Howe <peter.howe@virtustream.com>  Fri, 17 May 2019 22:26:51 -0600

nullunit (0.31-1) DIST; urgency=medium

  * packrat psk renamed to password

 -- Peter Howe <peter.howe@virtustream.com>  Fri, 17 May 2019 09:35:06 -0600

nullunit (0.30-1) DIST; urgency=medium

  * added build_name
  * updated for new packrat

 -- Peter Howe <peter.howe@virtustream.com>  Tue, 07 May 2019 13:19:35 -0600

nullunit (0.29-1) DIST; urgency=medium

  * Detect the cpu core count and pass that as -j for the target build

 -- Peter Howe <peter.howe@virtustream.com>  Thu, 13 Dec 2018 07:20:52 -0700

nullunit (0.28-1) DIST; urgency=medium

  * Bumped added MCP version 0.10
  * added centos-7

 -- Peter Howe <peter.howe@virtustream.com>  Fri, 07 Dec 2018 14:30:49 -0700

nullunit (0.27-5) DIST; urgency=medium

  * updated nullunitInterface for the new mcp/contractor interface

 -- Peter Howe <peter.howe@virtustream.com>  Mon, 27 Aug 2018 08:12:23 -0600

nullunit (0.26-5) DIST; urgency=medium

  * combining test/lint
  * flag to enable/disable uploading packages

 -- Peter Howe <peter.howe@virtustream.com>  Mon, 06 Aug 2018 16:02:32 -0600

nullunit (0.25-3) DIST; urgency=medium

  * Test score extraction

 -- Peter Howe <peter.howe@virtustream.com>  Fri, 20 Jul 2018 12:42:18 -0600

nullunit (0.24-1) DIST; urgency=medium

  * Packaging updates
  * renamed docs to doc

 -- Peter Howe <peter.howe@virtustream.com>  Mon, 16 Jul 2018 23:20:38 -0600

nullunit (0.23-3) DIST; urgency=medium

  * http(s)_proxy env vars
